[gd_scene load_steps=5 format=3 uid="uid://c6rvsrtaqke3o"]

[ext_resource type="TileSet" uid="uid://dd7enrass2b7r" path="res://assets/tile_set.tres" id="1_egso4"]
[ext_resource type="Script" path="res://scripts/elements/ui/MainMenu.gd" id="1_noswe"]
[ext_resource type="Theme" uid="uid://b8yrrewf8l7tp" path="res://assets/ui_theme.tres" id="2_1jg5o"]
[ext_resource type="AudioStream" uid="uid://dvm1rf7cefjh" path="res://assets/sounds/Classic Arcade SFX/Hit/Hit.wav" id="2_iocdh"]

[node name="MainMenu" type="Node2D"]
script = ExtResource("1_noswe")
clickSound = ExtResource("2_iocdh")

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource("1_egso4")
format = 2
layer_0/tile_data = PackedInt32Array(0, 327680, 0, 1, 327680, 0, 2, 327680, 0, 3, 327680, 0, 4, 327680, 0, 5, 327680, 0, 6, 327680, 0, 7, 327680, 0, 8, 327680, 0, 9, 327680, 0, 10, 327680, 0, 11, 327680, 0, 720896, 65536, 0, 720897, 65536, 0, 720898, 65536, 0, 720899, 65536, 0, 720900, 65536, 0, 720901, 65536, 0, 720902, 65536, 0, 720903, 65536, 0, 720904, 65536, 0, 720905, 65536, 0, 720906, 65536, 0, 720907, 65536, 0, 65536, 0, 3, 65537, 0, 3, 65538, 0, 3, 65539, 0, 3, 65540, 0, 3, 65541, 0, 3, 65542, 0, 3, 65543, 0, 3, 65544, 0, 3, 65545, 0, 3, 65546, 0, 3, 65547, 0, 3, 655360, 196608, 3, 655361, 196608, 3, 655362, 196608, 3, 655363, 196608, 3, 655364, 196608, 3, 655365, 196608, 3, 655366, 196608, 3, 655367, 196608, 3, 655368, 196608, 3, 655369, 196608, 3, 655370, 196608, 3, 655371, 196608, 3, 458756, 0, 1, 393220, 0, 1, 327684, 0, 1, 262148, 0, 1, 196612, 0, 0, 131076, 196608, 3, 131075, 327680, 4, 131074, 327680, 4, 131073, 327680, 4, 131072, 327680, 4, 196608, 327680, 4, 262144, 327680, 4, 327680, 327680, 4, 393216, 327680, 4, 458752, 327680, 4, 524288, 327680, 4, 589824, 327680, 4, 589825, 327680, 4, 524289, 327680, 4, 458753, 327680, 4, 393217, 327680, 4, 327681, 327680, 4, 262145, 327680, 4, 196609, 327680, 4, 196610, 327680, 4, 262146, 327680, 4, 327682, 327680, 4, 393218, 327680, 4, 458754, 327680, 4, 524290, 327680, 4, 589826, 327680, 4, 589827, 327680, 4, 524291, 131072, 3, 458755, 131072, 3, 393219, 131072, 3, 327683, 131072, 3, 262147, 131072, 3, 196611, 131072, 3, 524292, 0, 2, 589828, 0, 3, 589829, 0, 3, 524293, 327680, 0, 458757, 458752, 2, 393221, 458752, 2, 327685, 458752, 2, 262149, 458752, 2, 196613, 65536, 0, 131077, 196608, 3, 131078, 196608, 3, 196614, 65536, 0, 262150, 458752, 2, 327686, 458752, 2, 393222, 458752, 2, 458758, 458752, 2, 524294, 327680, 0, 589830, 0, 3, 589831, 0, 3, 524295, 131072, 2, 458759, 131072, 1, 393223, 131072, 1, 327687, 131072, 1, 262151, 131072, 1, 196615, 131072, 0, 131079, 196608, 3, 131080, 327680, 4, 196616, 65536, 3, 262152, 65536, 3, 327688, 65536, 3, 393224, 65536, 3, 458760, 65536, 3, 524296, 65536, 3, 589832, 327680, 4, 589833, 327680, 4, 524297, 327680, 4, 458761, 327680, 4, 393225, 327680, 4, 327689, 327680, 4, 262153, 327680, 4, 196617, 327680, 4, 131081, 327680, 4, 131082, 327680, 4, 196618, 327680, 4, 262154, 327680, 4, 327690, 327680, 4, 393226, 327680, 4, 458762, 327680, 4, 524298, 327680, 4, 589834, 327680, 4, 589835, 327680, 4, 524299, 327680, 4, 458763, 327680, 4, 393227, 327680, 4, 327691, 327680, 4, 262155, 327680, 4, 196619, 327680, 4, 131083, 327680, 4)
layer_1/tile_data = PackedInt32Array(1, 393216, 4, 9, 327680, 5, 3, 262144, 1, 524293, 196608, 1, 589832, 262144, 4, 10, 196608, 0, 65540, 1835008, 3, 65541, 1900544, 3, 65543, 1703936, 4, 393225, 1703936, 4, 458762, 1638400, 4, 393226, 1638400, 4, 327682, 1703936, 4, 393217, 1703936, 4, 393218, 1638400, 4)

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -25.0
offset_top = -39.0
offset_right = 25.0
offset_bottom = 31.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_1jg5o")

[node name="BtnPlay" type="Button" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_1jg5o")
text = "Play"

[node name="BtnQuit" type="Button" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
text = "Quit"
